--- a/EnergisticsTP/EnergisticsTP.csproj
+++ b/EnergisticsTP/EnergisticsTP.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Avro.Core" Version="0.1.0" />
   </ItemGroup>
 
 </Project>
